--- a/404.md
+++ b/404.md
@@ -7,4 +7,4 @@ permalink: /404.html
 
 # Page Not Found
 
-Unfortunately we were unable to find the page you requested. It could be the page doesn't exist or only exists for a specific version of these documents so please use the search feature to see if you are able to locate the information you were after.
+Can't find the page you requested. It could be the page doesn't exist or only exists for a specific version of these documents so please use the search feature to see if you are able to locate the information you were after.
