--- a/_posts/2023-11-03-welcome.md
+++ b/_posts/2023-11-03-welcome.md
@@ -4,7 +4,7 @@ date: 2023-11-03 15:56:00 +0200
 categories: website update
 badges:
  - type: info
-   tag: info-badge
+   tag: website-update
 ---
 
 I've found this section and will publish new updates here.
